@@ -68,6 +68,31 @@ class TestBufferedHTTP(unittest.TestCase):
                 if err:
                     raise Exception(err)
 
+    def test_nonstr_header_values(self):
+
+        class MockHTTPSConnection(object):
+
+            def __init__(self, hostport):
+                pass
+
+            def putrequest(self, method, path):
+                pass
+
+            def putheader(self, header, *values):
+                # Essentially what Python 2.7 does that caused us problems.
+                '\r\n\t'.join(values)
+
+            def endheaders(self):
+                pass
+
+        bufferedhttp.HTTPSConnection = MockHTTPSConnection
+        bufferedhttp.http_connect('127.0.0.1', 8080, 'sda', 1, 'GET', '/',
+            headers={'x-one': '1', 'x-two': 2, 'x-three': 3.0,
+                     'x-four': {'crazy': 'value'}}, ssl=True)
+        bufferedhttp.http_connect_raw('127.0.0.1', 8080, 'GET', '/',
+            headers={'x-one': '1', 'x-two': 2, 'x-three': 3.0,
+                     'x-four': {'crazy': 'value'}}, ssl=True)
+
 
 if __name__ == '__main__':
     unittest.main()
