@@ -8,3 +8,5 @@ swift (x.x.x)
     (X-Trans-ID). Setting the transaction id has moved from the proxy server to
     the catch_errors middleware. Additionally, the internal header has changed
     from X-CF-Trans-ID to X-Trans-ID.
+
+  * Fixed Python 2.7 httplib compatibility problem.
